--- a/SimpleTest.csproj
+++ b/SimpleTest.csproj
@@ -16,8 +16,8 @@
   <ItemGroup>
     <None Update="Shared/MainLayout.razor.css" CssScope="master-view-scope" />
     <None Update="Pages/View1.razor.css" CssScope="view-1-scope" />
-    <None Update="Pages/View2.razor.css" CssScope="view-2-scope" />
-    <None Update="Pages/View3.razor.css" CssScope="view-3-scope" />
+    <None Update="Pages/Layout.razor.css" CssScope="layout-scope" />
+    <None Update="Pages/Grid.razor.css" CssScope="grid-scope" />
   </ItemGroup>
 
 </Project>
